<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="person"
            type="com.example.androidexam.model.Person"/>
    </data>


    <RelativeLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_person"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:elevation="3dp"
            android:layout_gravity="center"
            app:cardCornerRadius="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="10dp"
                android:paddingVertical="20dp">
                <TextView
                    android:id="@+id/text_view_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center"
                    android:layout_margin="10dp"
                    android:textStyle="bold"
                    android:text='@{person.name.last + ", " + person.name.first}'/>
                <TextView
                    android:id="@+id/text_view_title_birthday"
                    android:layout_below="@+id/text_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_birthday"/>
                <TextView
                    android:id="@+id/text_view_bday"
                    android:layout_below="@+id/text_view_name"
                    android:layout_toRightOf="@+id/text_view_title_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.dob.date}'/>
                <TextView
                    android:id="@+id/text_view_title_age"
                    android:layout_marginLeft="60dp"
                    android:layout_toRightOf="@+id/text_view_bday"
                    android:layout_below="@+id/text_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_age"/>
                <TextView
                    android:id="@+id/text_view_age"
                    android:layout_toRightOf="@+id/text_view_title_age"
                    android:layout_marginLeft="15dp"
                    android:layout_below="@+id/text_view_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{String.valueOf(person.dob.age)}'/>
                <TextView
                    android:id="@+id/text_view_title_email"
                    android:layout_below="@+id/text_view_title_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_email"/>
                <TextView
                    android:id="@+id/text_view_email"
                    android:layout_below="@+id/text_view_title_birthday"
                    android:layout_toRightOf="@+id/text_view_title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.email}'/>
                <TextView
                    android:id="@+id/text_view_title_mobile"
                    android:layout_below="@+id/text_view_title_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_mobile"/>
                <TextView
                    android:layout_below="@+id/text_view_title_email"
                    android:layout_toRightOf="@+id/text_view_title_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_mobile"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.cell}'/>
                <TextView
                    android:id="@+id/text_view_title_address"
                    android:layout_below="@+id/text_view_mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_address"/>
                <TextView
                    android:id="@+id/text_view_address"
                    android:layout_below="@+id/text_view_mobile"
                    android:layout_toRightOf="@+id/text_view_title_address"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.location.street.number + " " + person.location.street.name + " " + person.location.city +" " + person.location.country + " " + person.location.postcode}'/>
                <TextView
                    android:id="@+id/text_view_title_contact_person"
                    android:layout_below="@+id/text_view_title_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_contact_person"/>
                <TextView
                    android:id="@+id/text_view_contact_name"
                    android:layout_below="@+id/text_view_title_address"
                    android:layout_toRightOf="@+id/text_view_title_contact_person"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.contactName}'/>
                <TextView
                    android:id="@+id/text_view_title_contact_person_mobile"
                    android:layout_below="@+id/text_view_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"
                    android:text="@string/title_contact_person_mobile"/>
                <TextView
                    android:id="@+id/text_view_contact_person_mobile"
                    android:layout_below="@+id/text_view_contact_name"
                    android:layout_toRightOf="@+id/text_view_title_contact_person_mobile"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text='@{person.contactNameNum}'/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>





    </RelativeLayout>
</layout>